# QOIThumbnailProvider

./: .gitignore  CMakeLists.txt  Dll.cpp  Dll.rc  QOIThumbnailProvider.cpp  README.md
